# sspdlog

./: CMakeLists.txt  LICENSE  README.md
example/: example1.cpp  example1_config.txt  example2.cpp  example2_config.txt  example3.cpp  example4.cpp  example5.cpp  example5_config.txt
include/sspdlog/: custom_sink.h  sspdlog.h  sspdlog_config.h  sspdlog_config_impl.h  sspdlog_errors.h  sspdlog_impl.h  sspdlogger.h  sspdlogger_impl.h
spdlog/: README.md
spdlog/include/spdlog/: common.h  formatter.h  logger.h  spdlog.h
spdlog/include/spdlog/details/: async_log_helper.h  line_logger.h  log_msg.h  logger_impl.h  pattern_formatter_impl.h  spdlog_impl.h
spdlog/include/spdlog/sinks/: file_sinks.h  stdout_sinks.h
tests/: sspdlog_basic_test.cpp
tools/: build.sh  test.sh
